# SmartDeskLamp

./: .gitignore  CMakeLists.txt  README.md  main.cpp  version.h  version.h.in
PaddleModels/ch_PP-OCRv3_det_infer/: ch_PP-OCRv3_det_infer_arm.nb
PaddleModels/ch_ppocr_mobile_v2.0_cls_infer/: ch_ppocr_mobile_v2.0_cls_arm.nb
camera/: Camera.cpp  Camera.h
cmake/: CPM.cmake  utility.cmake
conan/: build_aarch64.sh  build_local.sh  conanfile.txt
config/: config.cpp  config.h
glogHelper/: GlogHelper.cpp  GlogHelper.h
ocr/: CMakeLists.txt  db_post_process.cc  pipeline.cc  utils.cc
os/: nonCopyable.hpp  os.cpp  os.h  timeTask.hpp
test/: CMakeLists.txt
test/PP_shitu/src/: recognition.h  utils.cc
test/face_detection/: face_detection.cc
test/face_keypoints_detection/: face_keypoints_detection.cc
test/human_segmentation/: human_segmentation.cc
test/image_classification/: image_classification.cc
test/mask_detection/: mask_detection.cc
test/object_detection/picodet_detection/: object_detection_demo.cc  picodet_detection.cc
test/object_detection/ssd_mobilenetv1_detection/: ssd_mobilenetv1_detection.cc
test/object_detection/yolov3_mobilenet_v3/: yolov3_mobilenet_v3.cc
test/pose_detection/: pose_detection_demo.cc
test/test_ocr/: ch_PP-OCRv3_det_infer.nb  ch_PP-OCRv3_det_infer_arm.nb  ch_PP-OCRv3_det_infer_x86.nb  ch_ppocr_mobile_v2.0_cls_arm.nb  ocr_db_crnn.cc  test_ocr.cc
test/test_ocr/assets/models/: ch_ppocr_mobile_v2.0_cls_x86.nb
